--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -226,7 +226,7 @@ Revisión del \today $ $ a las \currenttime.
 
 \part{Tercer parcial}
 
-\part{Apéndices}
+\part{Ap\'{e}ndices}
 
 %\renewcommand{\chaptername}{Apéndice}
 %\renewcommand{\thechapter}{\Alph{chapter}}
@@ -234,7 +234,7 @@ Revisión del \today $ $ a las \currenttime.
 
 %\input{input/a-ejercicios}
 
-\chapter{Índices}
+\chapter{\'{I}ndices}
 
 %%TODO por qué no podemos utilizar only= para hacer whitelisting en lugar de blacklisting? que alguien lo arregle parfavar
 \renewcommand{\listtheoremname}{Lista de definiciones}
