--- a/diferenciales/input/0-notacion.tex
+++ b/diferenciales/input/0-notacion.tex
@@ -1,6 +1,6 @@
 % !TeX root = ../ecuaciones-diferenciales.tex
 
-\chapter{Notación}
+\chapter{Notaci\'{o}n}
 \begin{multicols}{2}
     \begin{itemize}
         \item $ \mathcal{P} \equiv f(x) = g(x)$, $\mathcal{P}$ es una ecuación.
