--- a/diferenciales/input/2-integracion-elemental.tex
+++ b/diferenciales/input/2-integracion-elemental.tex
@@ -1,3 +1,4 @@
+% !TeX root = ../ecuaciones-diferenciales.tex
 
 \chapter{Integraci\'{o}n elemental}
 \section{Ecuaciones homog\'{e}neas de grado 0}
