--- a/diferenciales/input/2-integracion-elemental.tex
+++ b/diferenciales/input/2-integracion-elemental.tex
@@ -13,7 +13,7 @@ $$
 $$
 Haciendo el cambio $\mbf{z} = \sfrac{\mbf{y}}{x}$ y desarrollando $\mbf{z'}$ tenemos:
 $$
-    \mbf{z'} = \frac{\mbf{y'}}{x} - \frac{\mbf{y}}{x} = \frac{f\left(1,\frac{\mbf{y}}{x}\right)}{x} - \frac{1}{x} \frac{\mbf{y}}{x} = \frac{f(1,\mbf{z}) - \mbf{z}}{x}
+    \mbf{z'} = \frac{\mbf{y'}}{x} - \frac{\mbf{y}}{x^2} = \frac{f\left(1,\frac{\mbf{y}}{x}\right)}{x} - \frac{1}{x} \frac{\mbf{y}}{x} = \frac{f(1,\mbf{z}) - \mbf{z}}{x}
 $$
 que es una EDO de variables separables.\\Veamos un ejemplo con resolución por este método:
 \begin{eg}[Espejo parabólico]
@@ -177,7 +177,7 @@ Lo que hemos hecho ha sido encontrar una solución de una ecuación del tipo $\m
 \end{eg}
 %%Considerar si añadir la primera parte de la clase del 05/02
 \section{Teoremas de existencia y unicidad}
-En la sección anterior hemos enunciado una preposición que denominamos de \texit{existencia y unicidad} para ecuaciones lineales de orden I. Nos gustaría dar condiciones más generales para saber si existen y son únicas ciertas soluciones.\\
+En la sección anterior hemos enunciado una proposición que denominamos de \texit{existencia y unicidad} para ecuaciones lineales de orden I. Nos gustaría dar condiciones más generales para saber si existen y son únicas ciertas soluciones.\\
 Consideraremos el PVI general:
 $$
     \begin{cases}
