--- a/diferenciales/input/2-integracion-elemental.tex
+++ b/diferenciales/input/2-integracion-elemental.tex
@@ -63,7 +63,7 @@ Vamos a ver un nuevo tipo de ecuaciones que no se pueden resolver por los métod
     \begin{enumerate}
         \item Vamos a considerar primero la ecuación sin el término que únicamente depende de $t$ : $\mbf{x}' = \mbf{x}$. En este caso es sencillo ver que $e^t$ es solución.
 
-        \item Consideramos ahora $y(t) = e^{-t}x(t)$, donde $x(t)$ es solución de $\mathcal{(EC)}$ (como observación, $e^-t$ es la inversa de la solución encontrada en (1)). Derivando se obtiene que:
+        \item Consideramos ahora $y(t) = e^{-t}x(t)$, donde $x(t)$ es solución de $\mathcal{(EC)}$ (como observación, $e^{-t}$ es la inversa de la solución encontrada en (1)). Derivando se obtiene que:
         $$
             y'(t) = -e^{-t}\cdot \mbf{x} + e^{-t} \cdot \mbf{x'} = e^{-t} \cdot (\mbf{x'}  - \mbf{x}) = t \cdot e^{-t}
         $$
@@ -378,7 +378,7 @@ Supongamos que tenemos una ecuación $y'(x) = -\frac{M(x,y)}{N(x,y)}$, es decir,
     Nos gustaría hallar cual sería nuestra $g$ a partir de que $g_x=M$ y $g_y=N$. Sabemos que $g_x = M = y + x^3$.
     Si integramos en $x$ (suponiendo $\mbf{y}$ constante):
     $$
-    g(x,\mbf{y} = yx + x^4/4 + C(y) \text{para C una constante vista desde $x$}.
+    g(x,\mbf{y} = yx + x^4/4 + C(y)) \text{ para C una constante vista desde $x$}.
     $$
     Además,
     \begin{gather*}
