--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -193,6 +193,8 @@ numbered=no
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\A}{\mathbb{A}}
+\newcommand{\B}{\mathbb{B}}
 \renewcommand{\P}{\mathcal{P}}
 \newcommand{\ZnZ}{\mathbb{Z}/n\mathbb{Z}}
 \newcommand{\ZmZ}{\mathbb{Z}/m\mathbb{Z}}
@@ -200,6 +202,8 @@ numbered=no
 \newcommand{\1}{\mathbf{1}}
 \newcommand{\gr}{\text{gr }}
 
+%%%% MATRICES
+\newcommand\mx[1]{\begin{matrix}#1\end{matrix}} 
 
 \renewcommand\qedsymbol{$\diamondsuit$}
 
@@ -222,9 +226,9 @@ Revisión del \today $ $ a las \currenttime.
 \part{Primer parcial}
 \input{input/1-ecuaciones-1er-orden}
 \input{input/2-integracion-elemental}
-\input{input/3-sistemas-1er-orden-y-lineales-orden-sup}
+\input{input/3-ecuaciones-lineales-orden-sup}
 \part{Segundo parcial}
-
+\input{input/4-sistemas-lineales}
 \part{Tercer parcial}
 
 \part{Ap\'{e}ndices}
