--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -203,7 +203,7 @@ numbered=no
 \newcommand{\gr}{\text{gr }}
 
 %%%% MATRICES
-\newcommand\mx[1]{\begin{matrix}#1\end{matrix}} 
+\newcommand\mx[1]{\left[\begin{matrix}#1\end{matrix}\right]} 
 
 \renewcommand\qedsymbol{$\diamondsuit$}
 
